UtahLiveDataTest/src/objects/ProgramCFDA__c.object
<CustomObject>
    <description>CFDA object for linking to FINET Program.</description>
    <fields>
        <fullName>CFDATitle__c</fullName>
        <formula>CASE(CFDA__c, 
&quot;10.579&quot;, &quot;Child Nutrition Discretionary Grants Limited Availability&quot;,
&quot;84.002&quot;, &quot;Adult Education - Basic Grants to States&quot;,
&quot;84.010&quot;, &quot;Improving Basic Programs Operated by Local Educational Agencies(Title I,Part A)&quot;,
&quot;84.011&quot;, &quot;Migrant Education - Basic State Formula Grants&quot;,
&quot;84.013&quot;, &quot;Prevention and Intervention Programs for Children and Youths Who Are Neglected, Delinquent, or at Risk&quot;,
&quot;84.027&quot;, &quot;Special Education - Grants to States&quot;,
&quot;84.048&quot;, &quot;Vocation Education - Basic Grants to States&quot;,
&quot;84.173&quot;, &quot;Preschool Grants for Children with Disabilities&quot;,
&quot;84.196&quot;, &quot;Education for Homeless Children and Youths for State and Local Activities&quot;,
&quot;84.287&quot;, &quot;21st Century Community Learning Centers&quot;,
&quot;84.323&quot;, &quot;Special Education - State Personnel Development&quot;,
&quot;84.358B&quot;, &quot;Rural and Low-Income School Program&quot;,
&quot;84.365&quot;, &quot;English Language Acquisition State Grants&quot;,
&quot;84.367&quot;, &quot;Improving Teacher Quality State Grants&quot;,
&quot;84.377&quot;, &quot;School Improvement Grants&quot;,
&quot;84.424A&quot;, &quot;Student Support and Academic Enrichment Program&quot;,
&quot;93.558&quot;, &quot;Temporary Assistance for Needy families&quot;,
&quot;94.006&quot;, &quot;Americorps State and National&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFDA__c</fullName>
        <description>CFDA numbers on which CFDA title field is based for ProgramCFDA object.</description>
        <label>CFDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10.579</fullName>
                </value>
                <value>
                    <fullName>84.002</fullName>
                </value>
                <value>
                    <fullName>84.010</fullName>
                </value>
                <value>
                    <fullName>84.011</fullName>
                </value>
                <value>
                    <fullName>84.013</fullName>
                </value>
                <value>
                    <fullName>84.027</fullName>
                </value>
                <value>
                    <fullName>84.048</fullName>
                </value>
                <value>
                    <fullName>84.173</fullName>
                </value>
                <value>
                    <fullName>84.196</fullName>
                </value>
                <value>
                    <fullName>84.287</fullName>
                </value>
                <value>
                    <fullName>84.323</fullName>
                </value>
                <value>
                    <fullName>84.358B</fullName>
                </value>
                <value>
                    <fullName>84.365</fullName>
                </value>
                <value>
                    <fullName>84.367</fullName>
                </value>
                <value>
                    <fullName>84.377</fullName>
                </value>
                <value>
                    <fullName>84.424A</fullName>
                </value>
                <value>
                    <fullName>93.558</fullName>
                </value>
                <value>
                    <fullName>94.006</fullName>
                </value>
                <value>
                    <fullName>84.01</fullName>
                    <isActive>false</isActive>
                    <label>84.01</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TextValueCFDA__c</fullName>
        <formula>TEXT(CFDA__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CFDA Number</label>
        <type>Text</type>
    </fields>
    <label>ProgramCFDA</label>
    <nameField>
        <label>ProgramCFDA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProgramCFDAs</pluralLabel>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>